@@ -195,4 +195,11 @@ GS_EXPORT NSString*	GSDebugMethodMsg(id obj, SEL sel, const char *file,
 #define NSWarnMLog(format, args...)
 #endif
 
+/* Getting stack information. Use caution with this. It uses builtin
+   gcc functions and currently only works up to 100 frames 
+*/
+GS_EXPORT void *NSFrameAddress(int offset);
+GS_EXPORT void *NSReturnAddress(int offset);
+GS_EXPORT unsigned NSCountFrames(void);
+
 #endif
